--- a/exp/set/style.css
+++ b/exp/set/style.css
@@ -1,10 +1,15 @@
-html, body, div {
+html, body, div, svg {
     margin: 0;
+    padding: 0;
+}
+
+html, body, div, svg {
+    width: 100vw;
+    height: 100vh;
 }
 
 svg {
-    width: 100vw;
-    height: 100vh;
+    display: block;
 }
 
 @media (min-width: 800px) {
