--- a/exp/set/style.css
+++ b/exp/set/style.css
@@ -4,8 +4,8 @@ html, body, div, svg {
 }
 
 html, body, div, svg {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 svg {
