--- a/exp/set/style.css
+++ b/exp/set/style.css
@@ -3,7 +3,12 @@ html, body, div, svg {
     padding: 0;
 }
 
-html, body, div, svg {
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
+div, svg {
     width: 100%;
     height: 100.1%;
 }
