--- a/exp/set/style.css
+++ b/exp/set/style.css
@@ -3,14 +3,19 @@ html, body, div, svg {
     padding: 0;
 }
 
-html, body {
+html {
     width: 100%;
     height: 100%;
 }
 
+body {
+    width: 100%;
+    height: 80%;
+}
+
 div, svg {
     width: 100%;
-    height: 100.1%;
+    height: 100%;
 }
 
 svg {
