--- a/exp/set/style.css
+++ b/exp/set/style.css
@@ -1,25 +1,7 @@
 html, body, div, svg {
+    width: 100vw;
+    height: 100vh;
     margin: 0;
-    padding: 0;
-}
-
-html {
-    width: 100%;
-    height: 100%;
-}
-
-body {
-    width: 100%;
-    height: 80%;
-}
-
-div, svg {
-    width: 100%;
-    height: 100%;
-}
-
-svg {
-    display: block;
 }
 
 @media (min-width: 800px) {
