--- a/exp/set/style.css
+++ b/exp/set/style.css
@@ -1,32 +1,56 @@
-html, body, div#main, svg {
+html, body, div#container {
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+}
+
+#main {
     width: 100vw;
     height: 100vh;
     margin: 0;
 }
 
 @media (min-width: 800px) {
-    html, body, div, svg {
+    #main {
         width: 800px;
     }
 }
 
-#main {
+div#container {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #fff;
 }
 
-.message {
-    flex: 1 1 50%;
-    padding: 1em;
+div#main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+div.msg {
+    padding: 5px;
+    margin: 5px;
     text-align: center;
-    font-size: 10em;
-    background: #ddd;
+    width: 100%;
+}
+
+div.buttons {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 svg {
     user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
+}
+
+svg text {
+    --font: Arial;
+    font-family: var(--font);
+    text-anchor: middle;
+    font-size: 40px;
+    dominant-baseline: central;
 }
