--- a/spam/post.css
+++ b/spam/post.css
@@ -1,7 +1,7 @@
 /* based on https://jrl.ninja/etc/post.css */
 body {
   font-family: Liberation Sans, sans-serif;
-  background-color: #fffaf7;
+  background-color: #fbedd4;
   line-height: 1.5;
 }
 main {
